Adding remarks about module-path